2010-04-29  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Debugger.Soft.dll:
	* Mono.Debugger.Soft.dll.mdb: Updated from Mono.

	* SoftDebuggerSession.cs:
	* SoftDebuggerStartInfo.cs: Track API changes.

	* SoftDebuggerAdaptor.cs: The call to ToString may return
	  null. Return an empty string in this case. Fixes bug
	  #599434.

2010-04-26  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Debugger.Soft.dll:
	* Mono.Debugger.Soft.dll.mdb: Updated.

2010-04-19  Carlo Kok  <ck@remobjects.com>
	* SoftDebuggerSession.cs:
	* SoftEvaluationContext.cs:
	  Allow for custom expression evaluator.

2010-04-14  Lluis Sanchez Gual  <lluis@novell.com>

	* SoftDebuggerAdaptor.cs: When getting the members of a type,
	  take into account overriden virtual properties. Fixes bug
	  #580994 - MD debugger hover window ignores virtual.

2010-03-30  Lluis Sanchez Gual  <lluis@novell.com>

	* SoftDebuggerSession.cs: Set the current request in the Step
	  Out command. Fixes bug #569418 - Debugger sometimes loses
	  track of stepping.

2010-03-30  Lluis Sanchez Gual  <lluis@novell.com>

	* SoftDebuggerSession.cs:
	* SoftDebuggerStartInfo.cs: Fix external console support
	  again.

2010-03-29  Levi Bard  <levi@unity3d.com>

	* SoftDebuggerSession.cs: Improve assembly matching.

2010-03-26  Levi Bard  <levi@unity3d.com>

	* SoftDebuggerSession.cs: Handle assembly unload.

2010-03-17  Lluis Sanchez Gual  <lluis@novell.com>

	* SoftDebuggerAdaptor.cs: Don't crash if something goes wrong
	  while getting type data.

2010-03-09  Michael Hutchinson  <mhutchinson@novell.com>

	* SoftDebuggerAdaptor.cs: Nicer log messages.

	* LoggingService.cs: Use custom logger for the new LogMessage
	  call. Remove unnecessary string.Format call.

2010-03-09  Martin Baulig  <martin@ximian.com>

	* SoftDebuggerSession.cs: Add protected virtual methods
	OnHandleEvent(), OnVMStartEvent(), OnVMDeathEvent() and
	OnBreakpointBound().

2010-03-05  Martin Baulig  <martin@ximian.com>
